# mono-s2s

./: .coveragerc  .gitignore  24_HOUR_EXECUTION_PLAN.md  CHANGELOG.md  CODE_SMELL_ANALYSIS.md  COPY_RESULTS_FROM_HPC.md  COVERAGE_JOURNEY.md  COVERAGE_STATUS.md  DOCUMENTATION_INDEX.md  EVALUATION_TIMEOUT_POSTMORTEM.md  EXPERIMENT_EVIDENCE_SYSTEM_COMPLETE.md  EXPERIMENT_TRACKING_SYSTEM.md  FINAL_LAMBDA_COMMANDS.txt  HPC_IMPLEMENTATION_COMPLETE.md  LAMBDA_SEED_COMMANDS.md  Mono_S2S_v1_2.ipynb  PROJECT_STATUS_SUMMARY.md  QUICKSTART.md  QUICK_EXPERIMENT_TRACKING_GUIDE.md  README.md  RECOVER_RESULTS.md  REMAINING_WORK_FOR_PAPER.md  RESULTS_WORKFLOW.md  SETUP_README.md  START_HERE.md  TESTING.md  WANDB_GUIDE.md  experiment_summary.txt  final_results.json  guidance_doc.txt  mono_s2s_v1_7.py  notebook_modifications.md  pyproject.toml  pytest.ini  setup_conda_env.bat  setup_conda_env.sh
documentation/: ICML_STRENGTHENING_SUGGESTIONS.md  README.md  getting_started.ipynb  monotone_llms_paper.tex  paper_methods_critique.md  paper_methods_fixes_brief.md  research_update_slides.tex  supplementary_results.tex
experiment_results/: .gitkeep  README.md
experiment_snapshots/: README.md
foundation_llm_experiments/: .gitignore  CHECKLIST.md  COLLEAGUE_GUIDE.md  COVERAGE_90_PERCENT.md  CRITICAL_FIXES_APPLIED.md  CURC_EXECUTION_GUIDE.md  DEPLOYMENT_STATUS.md  DEVELOPMENT_COMPLETE.md  FINAL_STATUS.md  FINAL_VERIFICATION_COMPLETE.md  INDEX.md  MODELS_AND_DATASETS.md  PAPER_INTEGRATION.md  PIPELINE_SUMMARY.md  PRE_DEPLOYMENT_CHECKLIST.md  QUICKSTART.md  README.md  ROCK_SOLID_VERIFICATION.md  START_HERE.md  SUMMARY_FOR_USER.md  TESTING_SUMMARY.md  TEST_COVERAGE.md  VALIDATION_COMPLETE.md  bootstrap_azure.sh  bootstrap_curc.sh  bootstrap_lambda.sh  diagnose_failure.sh  install_autostart.sh  make_executable.sh  monitor_and_resubmit.sh  pytest.ini  recover_and_resume.sh  requirements.txt  run_all.sh  run_azure.sh  run_azure_persistent.sh  run_expanded_experiment.sh  run_lambda.sh  run_tests.sh  run_variant_sweep.sh  (+5 more)
hpc_results/: baseline_training_history.json  data_statistics.json  evaluation_results.json  hotflip_results.json  monotonic_training_history.json  setup_complete.json
hpc_version/: ALPINE_SETUP.md  CHANGES_AT_A_GLANCE.md  CURC_SETUP_GUIDE.md  IMPROVEMENTS_SUMMARY.md  (+17 more)
(+112 files in other folders)
